@@ -2,6 +2,8 @@ package com.baeldung.streams.filter;
 
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import javax.net.ssl.HttpsURLConnection;
@@ -37,18 +39,18 @@ public class Customer {
         return this.points > 100;
     }
 
-    public boolean hasValidProfilePhoto() throws IOException {
-        URL url = new URL(this.profilePhotoUrl);
+    public boolean hasValidProfilePhoto() throws IOException, URISyntaxException {
+        URL url = new URI(this.profilePhotoUrl).toURL();
         HttpsURLConnection connection = (HttpsURLConnection) url.openConnection();
         return connection.getResponseCode() == HttpURLConnection.HTTP_OK;
     }
 
     public boolean hasValidProfilePhotoWithoutCheckedException() {
         try {
-            URL url = new URL(this.profilePhotoUrl);
+            URL url = new URI(this.profilePhotoUrl).toURL();
             HttpsURLConnection connection = (HttpsURLConnection) url.openConnection();
             return connection.getResponseCode() == HttpURLConnection.HTTP_OK;
-        } catch (IOException e) {
+        } catch (Exception e) {
             throw new RuntimeException(e);
         }
     }
